--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.13.3",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
