--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.4.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^5.0.0-beta.5",
-    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.0-rc.1",
+    "@mui/styles": "^5.0.1",
     "joi": "^17.4.2",
     "mongoose": "^5.13.3",
     "next": "11.0.1",
