--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-datetime-picker": "^3.3.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.31.0",
