--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.0-rc.1",
     "@mui/styles": "^5.0.1",
+    "babel-plugin-superjson-next": "^0.4.1",
     "joi": "^17.4.2",
     "mongoose": "^5.13.3",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-datetime-picker": "^3.3.0",
     "react-dom": "17.0.2",
+    "superjson": "^1.7.5",
     "swr": "^1.0.1"
   },
   "devDependencies": {
