--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.4.2",
     "mongoose": "^5.13.3",
     "next": "11.0.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-datetime-picker": "^3.3.0",
     "react-dom": "17.0.2",
