--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.0-rc.1",
     "@mui/styles": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.4",
     "babel-plugin-superjson-next": "^0.4.1",
     "joi": "^17.4.2",
     "mongoose": "^5.13.3",
