--- a/package.json
+++ b/package.json
@@ -23,12 +23,9 @@
     "next": "11.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-cool-inview": "^2.0.7",
-    "react-datetime-picker": "^3.3.0",
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "superjson": "^1.7.5",
-    "swr": "^1.0.1"
+    "superjson": "^1.7.5"
   },
   "devDependencies": {
     "eslint": "7.31.0",
